anoise (0.0.22) trusty; urgency=low

  * Sort noises with translations
  * Updated languages

 -- costales <costales.marcos@gmail.com>  Fri, 10 Apr 2015 16:14:31 +0000
